-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
None
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
QO 2022-10-31
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The query below raises an error that equality queries should only be run with equality indexes. However, we want to be able to run equality queries on range indexes as well. This query can be found in the enterprise modules under fle2/query/find_range.js
{$and: [
{salary: {$gt: Number(10020)}},
{savings: {$eq: NumberLong(1230500)}}
]},