SERVER-70319 support encrypted $eq with range index under $and

GitOrigin-RevId: b41b3f300c151996e44fd1d3118f1b7c9ef16b82